# ProgrammaticDemo

./: .gitignore  .mcp.json  CLAUDE.md  README.md  agent.md  agents.md  features.json  implementation-plan.md  pyproject.toml  spec.md
demos/: tcg_elevate_intro.yaml  tcg_elevate_landing.yaml
scripts/: apply_zoom_effects.py  mouse_follow_test.py  setup_macos.sh  stripe_landing_demo.py  tcg_landing_demo.py  verify_dependencies.py
src/programmatic_demo/: __init__.py  __main__.py
src/programmatic_demo/actuators/: __init__.py  browser.py  keyboard.py  mouse.py  terminal.py  window.py
src/programmatic_demo/agents/: __init__.py  claude_client.py  director.py
src/programmatic_demo/cli/: __init__.py  action.py  browser.py  effects.py  keyboard.py  main.py  mouse.py  perception.py  recording.py  run.py  script.py  template.py  terminal.py  video.py  visual.py
src/programmatic_demo/effects/: __init__.py  callout.py  click_effect.py  compositor.py  easing.py  highlight.py  mouse_tracker.py  zoom_effect.py
src/programmatic_demo/models/: __init__.py  script.py
src/programmatic_demo/nlp/: __init__.py  parser.py  resolver.py
src/programmatic_demo/orchestrator/: __init__.py  dispatcher.py  runner.py
src/programmatic_demo/postprocess/: __init__.py  audio.py  editor.py  overlays.py  transitions.py
tests/integration/: test_auto_scroll.py  test_click_effect.py  test_demo_execution.py  test_director_scene_planning.py  test_nlp_parsing.py  test_script_yaml.py  test_section_detection.py  test_smart_recording.py  test_template_instantiation.py  test_video_trim_concat.py
(+36 files in other folders)
